--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Cool Generator</h1>
+    <h1>COOL Generator</h1>
     <input type="color" name="" id="">
     <input type="color" name="" id="">
     <h2>Current CSS Background</h2>
