--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>COOL Generator</h1>
     <input type="color" name="" id="">
     <input type="color" name="" id="">
-    <h2>Current CSS Background</h2>
+    <h2>This is the Background</h2>
     <script type= "text/javascript"></script>
 </body>
 
